# gym-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: client.py  main.py  schemas.py
backend/app/routers/: dashboard.py  members.py  memberships.py  suscriptions.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/services/: api.js  axios.js
frontend/src/views/: AccessControl.jsx  AdminDashboard.jsx  AdminLogin.jsx
frontend/src/views/admin/: DashboardView.jsx  MembersView.jsx  MembershipsView.jsx  SubscriptionsView.jsx
